<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <!--Portada -->
            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/imagen_portada"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>
            <!--perfil -->
            <ImageView
                android:id="@+id/P_imagen"
                android:background="#354f60"
                android:layout_marginTop="130dp"
                android:layout_marginStart="15dp"
                android:scaleType="centerCrop"
                android:layout_width="140dp"
                android:layout_height="140dp"/>

                <!-- Editar img -->
            <ImageView
                android:id="@+id/Editar_imagen"
                android:layout_marginStart="130dp"
                android:layout_marginTop="230dp"
                android:src="@drawable/editar_imagen_perfil"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Nombre user-->
            <TextView
                android:id="@+id/P_n_usuario"
                android:text="@string/P_n_usuario"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- email-->
            <TextView
                android:id="@+id/P_email"
                android:text="@string/P_email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/P_nombre"
                    android:hint="@string/P_nombre"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/P_apellido"
                    android:hint="@string/P_apellido"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/P_profesion"
                    android:hint="@string/P_profesion"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/P_domicilio"
                    android:hint="@string/P_domicilio"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/P_edad"
                    android:hint="@string/P_edad"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/P_telefono"
                    android:hint="@string/P_telefono"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/Btn_Guardar"
                android:text="@string/Btn_Guardar"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:icon="@drawable/ic_iguardar_informacion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>