<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sign up"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="120dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/R_Et_nombre_usuario"
                android:hint="@string/R_Et_nombre_usuario"
                android:layout_width="match_parent"
                android:inputType="textPersonName|textCapWords"
                android:drawableStart="@drawable/ic_nombre_usuario"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/R_Et_email"
                android:hint="@string/R_Et_email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/R_Et_password"
                android:hint="@string/R_Et_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/R_Et_r_password"
                android:hint="@string/R_Et_r_password"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_password"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_registrar"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</RelativeLayout>